--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "nstu-website",
+  "name": "edusity",
   "homepage": "https://ullah321.github.io/edusity",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
